Language change on navigation remaining

--- a/app/src/main/res/layout/get_started.xml
+++ b/app/src/main/res/layout/get_started.xml
@@ -14,7 +14,7 @@
         android:gravity="center"
         android:padding="10dp"
         android:layout_marginTop="30dp"
-        android:text="SOS APP"
+        android:text="@string/savior"
         android:textColor="@color/black"
         android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:hint="Name"
+        android:hint="@string/name"
         android:layout_marginTop="30dp"
         app:boxCornerRadiusBottomEnd="30dp"
         app:boxCornerRadiusBottomStart="30dp"
@@ -61,7 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:hint="Phone number"
+        android:hint="@string/phone_number"
         android:layout_marginTop="30dp"
         app:boxCornerRadiusBottomEnd="30dp"
         app:boxCornerRadiusBottomStart="30dp"
@@ -81,13 +81,25 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phoneLayout">
+
+    </Spinner>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/submit"
         app:cornerRadius="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Get Started"
+        android:text="@string/get_started"
         android:paddingHorizontal="40dp"
         android:paddingVertical="10dp"
         android:textSize="18sp"
@@ -97,6 +109,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
